Sun Jul 20 18:16:57 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:

          Made send strategy remove samples when scheduling datalink
          release with a delay. This would avoid problem that the sample
          from previous association could not be delivered.

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Made send_delayed_notifications called before changing the
          mode in clear().

        * performance-tests/DCPS/Sync/SyncClient_i.cpp:

          Fixed a warning.

        * tests/DCPS/sub_init_loop/pub.ini:
        * tests/DCPS/sub_init_loop/sub.ini:

          Set the datalink_release_delay=0 to avoid timing issue on
          receiving add_assocition,remove_association and fully_associate
          calls because of delayed datalink release.

Sat Jul 19 18:00:22 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/pub.ini:
        * DevGuideExamples/DCPS/Messenger/pub_ipv6.ini:
        * DevGuideExamples/DCPS/Messenger/pub_mcast.ini:
        * DevGuideExamples/DCPS/Messenger/pub_reliable_mcast.ini:
        * DevGuideExamples/DCPS/Messenger/pub_udp.ini:
        * DevGuideExamples/DCPS/Messenger/run_corbaloc_test.pl:
        * DevGuideExamples/DCPS/Messenger/run_ns_test.pl:
        * DevGuideExamples/DCPS/Messenger/run_test.pl:
        * DevGuideExamples/DCPS/Messenger/sub.ini:
        * DevGuideExamples/DCPS/Messenger/sub_ipv6.ini:
        * DevGuideExamples/DCPS/Messenger/sub_mcast.ini:
        * DevGuideExamples/DCPS/Messenger/sub_reliable_mcast.ini:
        * DevGuideExamples/DCPS/Messenger/sub_udp.ini:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/pub.ini:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/pub_mcast.ini:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/pub_udp.ini:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/sub.ini:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/sub_mcast.ini: