@@ -87,11 +87,14 @@ SyncClient_i::get_notification (void)
 {
   while (true)
     {
-      if (notification_)
-        {
-          notification_ = false;
-          break;
-        }
+      {
+        ACE_GUARD( ACE_SYNCH_MUTEX, guard, this->lock_);
+        if (notification_)
+          {
+            notification_ = false;
+            break;
+          }
+      }
 
       ACE_Time_Value small(0,250000);
       ACE_OS::sleep (small);
@@ -115,12 +118,14 @@ void
 SyncClient_i::proceed (void)
   throw (CORBA::SystemException)
 {
+  ACE_GUARD( ACE_SYNCH_MUTEX, guard, this->lock_);
   notification_ = true;
 }
 
 void
 SyncClient_i::clean (void)
 {
+  ACE_GUARD( ACE_SYNCH_MUTEX, guard, this->lock_);
   notification_ = false;
 }
 
